--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -22,9 +22,13 @@
     display: flex;
     align-items: center;
 }
+
+.search,
+.search-result {
+    width: 361px;
+}
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     border-radius: var(--search-border-radius);
     background-color: rgba(22, 24, 35, 0.06);
@@ -58,6 +62,12 @@
     &:focus-within {
         border: 1.5px solid rgba(22, 24, 35, 0.2);
     }
+}
+.search-title {
+    padding: 5px 12px;
+    font-size: 14px;
+    font-weight:600;
+    color: rgba(22, 24, 35, 0.5);
 }
 .clear,
 .loading {
