--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -66,7 +66,7 @@
 .search-title {
     padding: 5px 12px;
     font-size: 14px;
-    font-weight:600;
+    font-weight: 600;
     color: rgba(22, 24, 35, 0.5);
 }
 .clear,
@@ -93,4 +93,8 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.custom-login-btn {
+    color: var(--primary);
 }
