--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -18,6 +18,7 @@
     justify-content: flex-start;
     border-radius: 0;
     padding: 11px 16px;
+    line-height: 1.8rem;
     &:hover {
         background-color: rgb(22, 24, 35, 0.03);
     }
