--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -100,11 +100,34 @@
     color: var(--primary);
 }
 
+// actions
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.action-btn {
+    color: #161823;
+    background-color: transparent;
+    font-size: 2.4rem;
+    padding: 4px 12px;
+    cursor: pointer;
+}
 // menu Button
 .more-btn {
     font-size: 2rem;
     margin-left: 28px;
     padding: 4px 8px;
     background-color: transparent;
+    cursor: pointer;
+}
+
+// avatar
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 12px;
     cursor: pointer;
 }
