--- a/src/components/Popper/Menu/MenuItem/MenuItem.module.scss
+++ b/src/components/Popper/Menu/MenuItem/MenuItem.module.scss
@@ -1,1 +1,15 @@
-
+// Menu items
+.menu-item {
+    margin-left: 0;
+    width: 100%;
+    justify-content: flex-start;
+    border-radius: 0;
+    padding: 11px 16px;
+    line-height: 1.8rem;
+    &:hover {
+        background-color: rgb(22, 24, 35, 0.03);
+    }
+    &.separation {
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
+    }
+}
