--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     font-size: 1.6rem;
+    font-family: 'ProximaNova', sans-serif;
     font-weight: 700;
     padding: 9px 16px;
     min-width: 100px;
