--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -24,77 +24,7 @@
     align-items: center;
 }
 
-.search,
-.search-result {
-    width: 361px;
-}
-.search {
-    position: relative;
-    height: var(--search-height);
-    border-radius: var(--search-border-radius);
-    background-color: rgba(22, 24, 35, 0.06);
-    padding-left: 16px;
-    align-items: center;
-    display: flex;
-    border: 1.5px solid transparent;
 
-    input {
-        flex: 1;
-        height: 100%;
-        color: var(--black);
-        font-size: 1.6rem;
-        background: transparent;
-        caret-color: var(--primary);
-    }
-
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: rgba(22, 24, 35, 0.75);
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        height: calc(var(--search-height) - 2 * var(--search-top-spacer));
-        background-color: rgba(22, 24, 35, 0.12);
-        width: 1px;
-        top: var(--search-top-spacer);
-        right: var(--search-button-width);
-    }
-    &:focus-within {
-        border: 1.5px solid rgba(22, 24, 35, 0.2);
-    }
-}
-.search-title {
-    padding: 5px 12px;
-    font-size: 14px;
-    font-weight: 600;
-    color: rgba(22, 24, 35, 0.5);
-}
-.clear,
-.loading {
-    position: absolute;
-    color: rgba(22, 24, 35, 0.34);
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.search-btn {
-    width: var(--search-button-width);
-    height: 100%;
-    border-top-right-radius: var(--search-border-radius);
-    border-bottom-right-radius: var(--search-border-radius);
-    font-size: 1.8rem;
-    color: rgba(22, 24, 35, 0.34);
-
-    &:hover {
-        background-color: rgba(22, 24, 34, 0.03);
-        cursor: pointer;
-    }
-    &:active {
-        background-color: rgba(22, 24, 35, 0.06);
-    }
-}
 
 .custom-login-btn {
     color: var(--primary);
@@ -120,6 +50,22 @@
     padding: 4px 8px;
     background-color: transparent;
     cursor: pointer;
+}
+
+// inbox number
+.badge {
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white);
+    font-family: 'ProximaNova', sans-serif;
+    background-color: var(--primary);
 }
 
 // avatar
